--- a/Aptogether/src/main/webapp/WEB-INF/web.xml
+++ b/Aptogether/src/main/webapp/WEB-INF/web.xml
@@ -31,22 +31,22 @@
 		<load-on-startup>1</load-on-startup>
 	</servlet>
 
-	<filter>
+<!-- 	<filter>	
 		<filter-name>springSecurityFilterChain</filter-name>
 		<filter-class>org.springframework.web.filter.DelegatingFilterProxy
 		</filter-class>
-	</filter>
+	</filter> -->
 	
 	<error-page>
 		<error-code>404</error-code>
 		<location>/WEB-INF/views/404.jsp</location>
 	</error-page>
-
+<!-- 
 	<filter-mapping>
 		<filter-name>springSecurityFilterChain</filter-name>
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
-	
+	 -->
 	<servlet-mapping>
 		<servlet-name>appServlet</servlet-name>
 		<url-pattern>/</url-pattern>
