--- a/Aptogether/src/main/webapp/WEB-INF/web.xml
+++ b/Aptogether/src/main/webapp/WEB-INF/web.xml
@@ -30,12 +30,21 @@
 		</init-param>
 		<load-on-startup>1</load-on-startup>
 	</servlet>
-
-<!-- 	<filter>	
-		<filter-name>springSecurityFilterChain</filter-name>
-		<filter-class>org.springframework.web.filter.DelegatingFilterProxy
-		</filter-class>
-	</filter> -->
+	
+		<!-- <filter>
+		<filter-name>encoding</filter-name>
+			<filter-class>org.springframework.web.filter.CharacterEncodingFilter</filter-class>
+			<init-param>
+				<param-name>encoding</param-name>
+				<param-value>UTF-8</param-value>
+			</init-param>
+		</filter>
+		
+		<filter-mapping>
+			<fitler-name>encoding</fitler-name>
+			<servlet-name>appServlet</servlet-name>
+		</filter-mapping> -->
+				
 	
 	<error-page>
 		<error-code>404</error-code>
