--- a/Aptogether/src/main/webapp/WEB-INF/web.xml
+++ b/Aptogether/src/main/webapp/WEB-INF/web.xml
@@ -42,11 +42,11 @@
 		<location>/WEB-INF/views/404.jsp</location>
 	</error-page>
 
-	<filter-mapping>
+<!-- 	<filter-mapping>
 		<filter-name>springSecurityFilterChain</filter-name>
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
-	
+	 -->
 	<servlet-mapping>
 		<servlet-name>appServlet</servlet-name>
 		<url-pattern>/</url-pattern>
